test/dummy/app/views/errors/file_not_found.html.slim
.error-page
	.panel.warn
		.panel-header
			h3.with-icon Sorry, we can't find what you're looking for!
		.panel-content.padded
			p
				' We can't find the page that you're looking for.
				' Make sure you typed the URL correctly, otherwise contact us below for technical support.

			h4.text-center.with-icon Details
			= render partial: 'details'